--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo Participante</title>
     <script type="module" async src="./javaScript/addParticipantes/index.js"></script>
-    <link href="./css/estiloParticipante.css" rel="stylesheet" type="text/css" />
+    <link href="../css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +21,7 @@
         </a>
     </header>
     <main class="main-content">
-        <section class="datosPersonales">
+        <section class="datos">
             <h2>FICHA DE ACOGIDA</h2>
 
             <form id="form_nuevoPart" action="" method="post">
@@ -128,7 +128,7 @@
 
                     <div class="botones-form">
                         <button class="btnes" type="button" id="comprobar">Comprobar</button>
-                        <input class="btnes" type="reset" id="borrar" value="Borrar" />
+                        <input class="btnes" type="reset" id="borrar" value="Limpiar" />
                         <a class="btnes" id="siguiente" href="/pagUnidadFamiliar">Siguiente</a>
                     </div>
                     <p id="resultado"></p>
@@ -137,9 +137,9 @@
 
     </main>
 
-    <footer>
+    <!-- <footer>
         © 2024 Olga Gil y Lucía Morado. Todos los derechos reservados
-    </footer>
+    </footer> -->
 
 </body>
 
