--- a/public/css/estiloParticipante.css
+++ b/public/css/estiloParticipante.css
@@ -20,7 +20,6 @@ body {
 }
 
 .imgLogo {
-    /* border-bottom: 2px solid #af27ce; */
     display: flex;
     justify-content: center;
 }
@@ -37,20 +36,14 @@ main {
     justify-content: center;
 }
 
-.datosPersonales {
+.datos {
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-family: 'Roboto';
-    /* margin: 44px 100px; */
-    /* padding: 40px; */
     width: 700px;
     border-top: 2px solid #af27ce;
     border-bottom: 2px solid #af27ce;
-    /* border: 2px solid #af27ce;
-      border-radius: 10px;
-      box-sizing: content-box;
-      box-shadow: 10px 5px 5px #8b3eae; */
 }
 
 h2 {
@@ -69,7 +62,6 @@ form {
     flex-direction: column;
     justify-content: space-between;
 }
-
 
 .divRadioButton {
     margin-left: 20px;
@@ -98,7 +90,6 @@ h3 {
     display: flex;
     justify-content: center;
 }
-
 
 .botones-form {
     display: flex;
