--- a/public/views/nuevaUnidadFamiliar.html
+++ b/public/views/nuevaUnidadFamiliar.html
@@ -30,29 +30,35 @@
                 <h3>Unidad Familiar</h3>
                 <div class="div_bloque">
                     <label for="miembros">Miembros (contando la persona)</label>
-                    <input class="inputTexto" type="number" id="miembros" name="miembros" placeholder=" Introduzca el número de miembros" required />
+                    <input class="inputTexto" type="number" id="miembros" name="miembros"
+                        placeholder=" Introduzca el número de miembros" required />
                 </div>
 
                 <div class="div_bloque">
                     <label for="situacion">Situación</label>
-                    <input class="inputTexto" type="text" id="situacion" name="situacion" placeholder=" Introduzcala situación (sin hogar, refugio, compartida, habitación o piso en alquiler, piso o vivienda en propiedad, interna...)" required />
+                    <input class="inputTexto" type="text" id="situacion" name="situacion"
+                        placeholder=" Introduzcala situación (sin hogar, refugio, compartida, habitación o piso en alquiler, piso o vivienda en propiedad, interna...)"
+                        required />
                 </div>
-                
-                
+
+
                 <div class="div_bloque">
                     <label for="cantMenores">Número de menores</label>
-                    <input class="inputTexto" type="number" id="cantMenores" name="cantMenores" placeholder=" Introduzca el número de menores" required />
+                    <input class="inputTexto" type="number" id="cantMenores" name="cantMenores"
+                        placeholder=" Introduzca el número de menores" required />
                 </div>
-                
-                <div class="div_bloque">
-                    <label for="edad">Edad de los menores</label>
-                    <input class="inputTexto" type="number" id="edad" name="edad" placeholder=" Introduzzca la edad de los menores" required />
+                <div class="definir">
+                    <div class="div_bloque">
+                        <label for="edad">Edad de los menores</label>
+                        <input class="inputTexto" type="number" id="edad" name="edad"
+                            placeholder=" Introduzzca la edad de los menores" required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="cantEscolarizados">Número de menores escolarizados</label>
+                        <input class="inputTexto" type="number" id="cantEscolarizados" name="cantEscolarizados"
+                            placeholder=" Introduzca el número de menores escolarizados" required />
+                    </div>
                 </div>
-                <div class="div_bloque">
-                    <label for="cantEscolarizados">Número de menores escolarizados</label>
-                    <input class="inputTexto" type="number" id="cantEscolarizados" name="cantEscolarizados" placeholder=" Introduzca el número de menores escolarizados" required />
-                </div>
-                
 
                 <div class="botones-form">
                     <button class="btnes" type="button" id="comprobar">Comprobar</button>
