correcciones botones e inputs

--- a/public/views/nuevaSalud.html
+++ b/public/views/nuevaSalud.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salud - Nuevo participante</title>
     <script type="module" async src="./javaScript/index.js"></script>
-    <link href="./css/estiloMenu.css" rel="stylesheet" type="text/css" />
+    <link href="../css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,41 +15,60 @@
 </head>
 
 <body>
-    <header class="divCuerpo">
-        <section class="salud">
+    <header>
+        <a class="imgLogo">
+            <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
+        </a>
+    </header>
+
+    <main class="divCuerpo">
+        <section class="datos">
             <h2>FICHA DE ACOGIDA</h2>
 
             <form id="form_salud" action="" method="post">
 
-                <h3><strong>Salud</strong></h3>
+                <h3>Salud</h3>
+                <div class="div_bloque">
+                    <label for="cuestionesGraves">Cuestiones graves</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="cuestionesGraves" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="cuestionesGraves" value="1">No</input>
+                    </div>
+                </div>
+                <div class="div_bloque">
+                    <label for="especificacionesGraves">Especificar cuestiones graves</label>
+                    <input class="inputTexto" type="text" id="especificacionesGraves" name="especificacionesGraves" placeholder=" Especificar las cuestiones graves de salud" />
+                </div>
+                <div class="div_bloque">
+                    <label for="discapacidadReconocida">Discapacidad reconocida</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="discapacidadReconocida" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="discapacidadReconocida" value="1">No</input>
+                    </div>
+                </div>
 
-                <label for="cuestionesGraves">Cuestiones graves</label>
-                <input type="radio" name="cuestionesGraves" value="0">Si</input>
-                <input type="radio" name="cuestionesGraves" value="1">No</input>
-                <label for="especificacionesGraves">Especificar cuestiones graves</label>
-                <input type="text" id="especificacionesGraves" name="especificacionesGraves" placeholder="..." />
-
-                <label for="discapacidadReconocida">Discapacidad reconocida</label>
-                <input type="radio" name="discapacidadReconocida" value="0">Si</input>
-                <input type="radio" name="discapacidadReconocida" value="1">No</input>
-                <label for="especificacionesDiscapacidad">Especificar discapacidad reconocida</label>
-                <input type="text" id="especificacionesDiscapacidad" name="especificacionesDiscapacidad"
-                    placeholder="..." />
-                <label for="asistenciaSanitaria">Asistencia sanitaria (no tiene, en trámite, Seguridad Social, seguro
-                    privado, ...)</label>
-                <input type="text" id="asistenciaSanitaria" name="asistenciaSanitaria" placeholder="..." required />
-
+                <div class="div_bloque">
+                    <label for="especificacionesDiscapacidad">Especificar discapacidad reconocida</label>
+                    <input class="inputTexto" type="text" id="especificacionesDiscapacidad" name="especificacionesDiscapacidad"
+                        placeholder=" Especificar la discapacidad reconocida" />
+                </div>
+                <div class="div_bloque">
+                    <label for="asistenciaSanitaria">Asistencia sanitaria (no tiene, en trámite, Seguridad Social,
+                        seguro
+                        privado, ...)</label>
+                    <input class="inputTexto" type="text" id="asistenciaSanitaria" name="asistenciaSanitaria" placeholder=" Especificar la asistencia sanitaria que tiene" required />
+                </div>
 
                 <div class="botones-form">
-                    <button type="button" id="comprobar">Comprobar</button>
-                    <input type="reset" value="Borrar" />
-                    <a href="/pagNuevaFormacion">Siguiente</a>
-                    <a href="/pagNuevaUnidadFamiliar">Anterior</a>
+                    <button class="btnes" type="button" id="comprobar">Comprobar</button>
+                    <input class="btnes" type="reset" id="borrar" value="Limpiar" />
+                    <a class="btnes" href="/pagNuevaUnidadFamiliar">Anterior</a>
+                    <a class="btnes" href="/pagNuevaFormacion">Siguiente</a>
                 </div>
             </form>
         </section>
 
-    </header>
+    </main>
 
 
 </body>
