--- a/public/views/nuevaUnidadFamiliar.html
+++ b/public/views/nuevaUnidadFamiliar.html
@@ -62,7 +62,7 @@
 
                 <div class="botones-form">
                     <button class="btnes" type="button" id="comprobar">Comprobar</button>
-                    <input class="btnes" type="reset" id="borrar" value="limpiar" />
+                    <input class="btnes" type="reset" id="borrar" value="Limpiar" />
                     <a class="btnes" href="/pagUnidadFamiliar">Anterior</a>
                     <a class="btnes" href="/pagNuevaSalud">Siguiente</a>
                 </div>
