--- a/public/views/unidadFamiliar.html
+++ b/public/views/unidadFamiliar.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="botones-form">
                     <button class="btnes" type="button" id="comprobar">Comprobar</button>
-                    <input class="btnes" type="reset" id="borrar" value="limpiar" />
+                    <input class="btnes" type="reset" id="borrar" value="Limpiar" />
                     <a class="btnes" href="/pagNuevoParticipante">Anterior</a>
                     <a class="btnes" id="siguiente" href="/pagNuevaUnidadFamiliar">Siguiente</a>
                 </div>
