--- a/public/views/nuevaSalud.html
+++ b/public/views/nuevaSalud.html
@@ -32,7 +32,7 @@
                     <label for="cuestionesGraves">Cuestiones graves</label>
                     <div class="divRadioButton">
                         <input class="divRadioButton" type="radio" name="cuestionesGraves" value="0">Si</input>
-                        <input class="divRadioButton" type="radio" name="cuestionesGraves" value="1">No</input>
+                        <input class="divRadioButton" type="radio" name="cuestionesGraves" value="1" checked>No</input>
                     </div>
                 </div>
                 <div class="div_bloque">
@@ -43,7 +43,7 @@
                     <label for="discapacidadReconocida">Discapacidad reconocida</label>
                     <div class="divRadioButton">
                         <input class="divRadioButton" type="radio" name="discapacidadReconocida" value="0">Si</input>
-                        <input class="divRadioButton" type="radio" name="discapacidadReconocida" value="1">No</input>
+                        <input class="divRadioButton" type="radio" name="discapacidadReconocida" value="1" checked>No</input>
                     </div>
                 </div>
 
