--- a/public/views/nuevaFormacion.html
+++ b/public/views/nuevaFormacion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formación - Nuevo participante</title>
     <script type="module" async src="./javaScript/index.js"></script>
-    <link href="./css/estiloMenu.css" rel="stylesheet" type="text/css" />
+    <link href="./css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,50 +15,88 @@
 </head>
 
 <body>
-    <header class="divCuerpo">
-        <section class="formacion">
+    <header>
+        <a class="imgLogo">
+            <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
+        </a>
+    </header>
+    <main class="divCuerpo">
+        <section class="datos">
             <h2>FICHA DE ACOGIDA</h2>
 
             <form id="form_formacion" action="" method="post">
 
-                <h3><strong>Formación</strong></h3>
-
-                <label for="nivelEstudios">Nivel de estudios (sin esstudios, básica, secundaria...)</label>
-                <input type="text" id="nivelEstudios" name="nivelEstudios" placeholder="..." required />
-                <label for="especialidad">Especialidad</label>
-                <input type="text" id="especialidad" name="especialidad" placeholder="..." required />
-                <label for="formacionComplementaria">Formación complementaria o no reglada</label>
-                <input type="text" id="formacionComplementaria" name="formacionComplementaria" placeholder="..." />
-                <label for="otrosDatos">Otros datos sobre formación</label>
-                <input type="text" id="otrosDatos" name="otrosDatos" placeholder="..." />
-
-                <label for="tieneCarnetAlimentos">¿Tiene carnet de manipulador de alimentos?</label>
-                <input type="radio" name="tieneCarnetAlimentos" value="0">Si</input>
-                <input type="radio" name="tieneCarnetAlimentos" value="1" checked>No</input>
-                <label for="tieneCarnetConducir">¿Tiene carnet de conducir?</label>
-                <input type="radio" name="tieneCarnetConducir" value="0">Si</input>
-                <input type="radio" name="tieneCarnetConducir" value="1" checked>No</input>
-                <label for="tieneCV">¿Tiene Curriculum Vitae?</label>
-                <input type="radio" name="tieneCV" value="0">Si</input>
-                <input type="radio" name="tieneCV" value="1" checked>No</input>
-                <label for="tieneEstudiosHomologados">¿Tiene estudios homologados?</label>
-                <input type="radio" name="tieneEstudiosHomologados" value="0">Si</input>
-                <input type="radio" name="tieneEstudiosHomologados" value="1" checked>No</input>
-                <label for="tieneCarnetConvalidado">¿Tiene carnet convalidado?</label>
-                <input type="radio" name="tieneCarnetConvalidado" value="0">Si</input>
-                <input type="radio" name="tieneCarnetConvalidado" value="1" checked>No</input>
-
+                <h3>Formación</h3>
+                <div class="div_bloque">
+                    <label for="nivelEstudios">Nivel de estudios (sin esstudios, básica, secundaria...)</label>
+                    <input class="inputTexto" type="text" id="nivelEstudios" name="nivelEstudios"
+                        placeholder=" Especifique el nivel de estudios" required />
+                </div>
+                <div class="div_bloque">
+                    <label for="especialidad">Especialidad</label>
+                    <input class="inputTexto" type="text" id="especialidad" name="especialidad"
+                        placeholder=" Especifique la especialidad" required />
+                </div>
+                <div class="div_bloque">
+                    <label for="formacionComplementaria">Formación complementaria o no reglada</label>
+                    <input class="inputTexto" type="text" id="formacionComplementaria" name="formacionComplementaria"
+                        placeholder=" Especifique la formacióncomplementaria o no reglada" />
+                </div>
+                <div class="div_bloque">
+                    <label for="otrosDatos">Otros datos sobre formación</label>
+                    <input class="inputTexto" type="text" id="otrosDatos" name="otrosDatos"
+                        placeholder="Especifique otros datos sobre la formación" />
+                </div>
+                <div class="div_bloque">
+                    <label for="tieneCarnetAlimentos">¿Tiene carnet de manipulador de alimentos?</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="tieneCarnetAlimentos" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="tieneCarnetAlimentos" value="1"
+                            checked>No</input>
+                    </div>
+                </div>
+                <div class="div_bloque">
+                    <label for="tieneCarnetConducir">¿Tiene carnet de conducir?</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="tieneCarnetConducir" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="tieneCarnetConducir" value="1"
+                            checked>No</input>
+                    </div>
+                </div>
+                <div class="div_bloque">
+                    <label for="tieneCV">¿Tiene Curriculum Vitae?</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="tieneCV" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="tieneCV" value="1" checked>No</input>
+                    </div>
+                </div>
+                <div class="div_bloque">
+                    <label for="tieneEstudiosHomologados">¿Tiene estudios homologados?</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="tieneEstudiosHomologados" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="tieneEstudiosHomologados" value="1"
+                            checked>No</input>
+                    </div>
+                </div>
+                <div class="div_bloque">
+                    <label for="tieneCarnetConvalidado">¿Tiene carnet convalidado?</label>
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="tieneCarnetConvalidado" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="tieneCarnetConvalidado" value="1"
+                            checked>No</input>
+                    </div>
+                </div>
 
                 <div class="botones-form">
-                    <button type="button" id="comprobar">Comprobar</button>
-                    <input type="reset" value="Borrar" />
-                    <a href="/pagNuevaLaboral">Siguiente</a>
-                    <a href="/pagNuevaSalud">Anterior</a>
+                    <button class="btnes" type="button" id="comprobar">Comprobar</button>
+                    <input class="btnes" type="reset" id="borrar" value="Limpiar" />
+                    <a class="btnes" href="/pagNuevaSalud">Anterior</a>
+                    <a class="btnes" href="/pagNuevaLaboral">Siguiente</a>
                 </div>
             </form>
         </section>
 
-    </header>
+    </main>
 
 
 </body>
