creacion del estilo de laboral y modificaciones varias

--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -19,17 +19,30 @@
     <!-----------------------   HEADER   -------------------->
     <!------------------------------------------------------->
     <header>
-        <div>
-            <a class="imgLogo" href="#">
+        <header>
+            <a class="imgLogo">
                 <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
             </a>
-        </div>
+        </header>
         <div>
             <nav class="navMenu">
                 <ul>
-                    <li><a href="/pagNuevoParticipante" class="li_navMenu">PARTICIPANTES</a></li>
-                    <li><a href="#UnidadFamiliar" class="li_navMenu">UNIDAD FAMILIAR</a></li>
-                    <li><a href="#Ayuda" class="li_navMenu">AYUDA</a></li>
+                    <li>
+                        <a class="li_navMenu">PARTICIPANTES</a>
+                        <ul>
+                            <li><a href="/pagNuevoParticipante">Añadir nuevo participante</a></li>
+                            <li><a href="">Buscar participantes</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="" class="li_navMenu">UNIDAD FAMILIAR</a>
+                        <ul>
+                            <li><a href="">Buscar unidad familiar</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="" class="li_navMenu">AYUDA</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -43,7 +56,7 @@
     </header>
 
     <main>
-        
+
     </main>
 
     <footer>
