--- a/public/views/nuevaLaboral.html
+++ b/public/views/nuevaLaboral.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboral - Nuevo participante</title>
     <script type="module" async src="./javaScript/index.js"></script>
-    <link href="./css/estiloMenu.css" rel="stylesheet" type="text/css" />
+    <link href="../css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -33,14 +33,14 @@
                 <div class="div_bloque">
                     <label for="premisoTrabajo">¿Tiene permiso de trabajo?</label>
                     <div class="divRadioButton">
-                        <input class="divRadioButton" type="radio" name="premisoTrabajo" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="premisoTrabajo" value="0">Sí</input>
                         <input class="divRadioButton" type="radio" name="premisoTrabajo" value="1" checked>No</input>
                     </div>
                 </div>
                 <div class="div_bloque">
                     <label for="experienciaLaboral">¿Tiene experiencia laboral?</label>
                     <div class="divRadioButton">
-                        <input class="divRadioButton" type="radio" name="experienciaLaboral" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="experienciaLaboral" value="0">Sí</input>
                         <input class="divRadioButton" type="radio" name="experienciaLaboral" value="1"
                             checked>No</input>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="div_bloque">
                     <label for="inscritoDemandante">¿Está inscrito como demandante de empleo?</label>
                     <div class="divRadioButton">
-                        <input class="divRadioButton" type="radio" name="inscritoDemandante" value="0">Si</input>
+                        <input class="divRadioButton" type="radio" name="inscritoDemandante" value="0">Sí</input>
                         <input class="divRadioButton" type="radio" name="inscritoDemandante" value="1"
                             checked>No</input>
                     </div>
@@ -56,30 +56,30 @@
                 <div class="div_bloque">
                     <label for="situacionLaboral">Situación laboral actual (desempleo, empleo, estudiante...)</label>
                     <input class="inputTexto" type="text" id="situacionLaboral" name="situacionLaboral"
-                        placeholder="..." required />
+                        placeholder=" Introduzca la situación laboral" required />
                 </div>
                 <div class="div_bloque">
                     <label for="tipoContrato">Especificar el tipo de contrato</label>
-                    <input class="inputTexto" type="text" id="tipoContrato" name="tipoContrato" placeholder="..." />
+                    <input class="inputTexto" type="text" id="tipoContrato" name="tipoContrato" placeholder=" Introduzca el tipo de contrato" />
                 </div>
                 <div class="div_bloque">
                     <label for="tipoJornada">Especificar el tipo de jornada laboral</label>
-                    <input class="inputTexto" type="text" id="tipoJornada" name="tipoJornada" placeholder="..." />
+                    <input class="inputTexto" type="text" id="tipoJornada" name="tipoJornada" placeholder=" Introduzca la jornada laboral" />
                 </div>
                 <div class="div_bloque">
                     <label for="tipoSector">Especificar el sector en el que trabaja</label>
-                    <input class="inputTexto" type="text" id="tipoSector" name="tipoSector" placeholder="..." />
+                    <input class="inputTexto" type="text" id="tipoSector" name="tipoSector" placeholder=" Introduzca el sector del trabajo" />
                 </div>
                 <div class="div_bloque">
 
                     <label for="sectoresExpPrevia">Especificar los sectores de experiencia previa</label>
                     <input class="inputTexto" type="text" id="sectoresExpPrevia" name="sectoresExpPrevia"
-                        placeholder="..." />
+                        placeholder=" Introduzca los sectores en que tiene experiencia previa" />
                 </div>
                 <div class="div_bloque">
                     <label for="otrosDatosExpPrevia">Otros datos de interés sobre experiencia laboral</label>
                     <input class="inputTexto" type="text" id="otrosDatosExpPrevia" name="otrosDatosExpPrevia"
-                        placeholder="..." />
+                        placeholder=" Introduzca otros datos de interés laboral" />
 
                 </div>
 
