--- a/public/css/estiloParticipante.css
+++ b/public/css/estiloParticipante.css
@@ -87,6 +87,7 @@ form {
     padding-bottom: 15px;
     border-top: 2px solid #af27ce;
     border-bottom: 2px solid #af27ce;
+    white-space: pre-line;
 }
 
 h3 {
