--- a/public/views/nuevaFormacion.html
+++ b/public/views/nuevaFormacion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formación - Nuevo participante</title>
     <script type="module" async src="./javaScript/index.js"></script>
-    <link href="./css/estiloParticipante.css" rel="stylesheet" type="text/css" />
+    <link href="../css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
