--- a/public/css/estiloMenu.css
+++ b/public/css/estiloMenu.css
@@ -9,6 +9,59 @@ html {
     padding: 0px;
 }
 
+/* header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 98px;
+    border-bottom: 2px solid #af27ce;
+    width: 87%;
+    position: fixed;
+    z-index: 5;
+
+} */
+
+.navMenu {
+    font-family: 'Comfortaa';
+    font-size: 21px;
+    align-content: center;
+}
+
+.navMenu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+li{
+    list-style: none;
+}
+.navMenu ul li {
+    background-color: #2e518b;
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 0;
+    
+}
+
+.navMenu ul li:hover {
+    background: #5b78a7;
+}
+
+.navMenu ul a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 15px;
+    padding: 10px;
+    font-family: "Roboto";
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+}
+
+
 body {
     color: #af27ce;
     font-family: 'Comfortaa';
@@ -17,11 +70,22 @@ body {
 
 .imgLogo {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .logo {
     margin-top: 20px;
     margin-bottom: 30px;
     width: 28%;
+}
+
+footer {
+    font-family: 'Roboto';
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    height: 30px;
+    background-color: #af27ce;
+    color: white;
+    align-items: center;
 }
