Tercer formulario in progress

--- a/public/views/nuevaUnidadFamiliar.html
+++ b/public/views/nuevaUnidadFamiliar.html
@@ -51,12 +51,12 @@
                     <input class="inputTexto" type="number" id="cantEscolarizados" name="cantEscolarizados"
                         pattern="\d*" placeholder=" Introduzca el número de menores escolarizados" required />
                 </div>
-                <div class="definir">
-                    <div id="divMenores" class="div_bloque">
+                <div id="divMenores" class="definir">
+                    <!-- <div class="div_bloque">
                         <label for="edad">Edad del menor</label>
                         <input class="inputTexto" type="number" id="edad" name="edad" pattern="\d*"
                             placeholder=" Introduzca la edad del menor" required />
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="botones-form">
